# hub-rs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/get-info/: Cargo.toml
examples/get-info/src/: main.rs
examples/hub-replicator/: Cargo.toml
examples/hub-replicator/migrations/: 20230807055433_initial.down.sql  20230807055433_initial.up.sql
examples/hub-replicator/src/: main.rs  types.rs
src/: lib.rs
src/builders/: make_cast_add.rs  mod.rs
