[package]
name = "hub-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.9.2", features = ["transport","tls","tls-roots","tls-webpki-roots"]}
prost = "0.11.9"
serde = { version = "1.0.152", features = ["derive"] }
hex = { version = "0.4.3" }

[build-dependencies]
tonic-build = "0.9.2"
