[package]
name = "hub-rs"
description = "A barebones Rust library to interact with Farcaster hubs"
version = "0.1.1"
edition = "2021"
authors = ["Portals <developers@joinportals.app>", "Landon Boles <landon@joinportals.app>"]
license = "MIT"
repository = "https://github.com/withportals/hub-rs"

[dependencies]
tonic = { version = "0.9.2", features = ["transport","tls","tls-roots","tls-webpki-roots"]}
prost = "0.11.9"
serde = { version = "1.0.152", features = ["derive"] }
hex = { version = "0.4.3" }
tokio = { version = "1.29.1" }

[build-dependencies]
tonic-build = "0.9.2"
