[package]
name = "get-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hub-rs = { path = "../../" }
tokio = { version = "1.29.1", features = ["full"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
rand = { version = "0.8.5" }
